# socktop

./: Cargo.toml  README.md  nohup.out
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: cross-compiling.md  socktop-agent.service  tmux_4_rpis_v2jpg
proto/: processes.proto
scripts/: check-windows.sh  publish_socktop_agent.sh
socktop/: Cargo.toml  README.md  build.rs
socktop/src/: app.rs  history.rs  lib.rs  main.rs  profiles.rs  types.rs  ws.rs
socktop/src/ui/: cpu.rs  disks.rs  gpu.rs  header.rs  mem.rs  mod.rs  net.rs  processes.rs  swap.rs  theme.rs  util.rs
socktop/tests/: cli_args.rs  profiles.rs  ws_probe.rs
socktop_agent/: Cargo.toml  README.md  build.rs
socktop_agent/src/: gpu.rs  main.rs  metrics.rs  metrics_new.rs  proto.rs  sampler.rs  state.rs  tls.rs  types.rs  ws.rs
socktop_agent/tests/: cli_args.rs  port_parse.rs  tls_cert_creation.rs
